--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+certifi==2020.4.5.2
+chardet==3.0.4
 click==7.1.2
 dnspython==1.16.0
 Flask==1.1.2
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 pymongo==3.10.1
+requests==2.23.0
 schedule==0.6.0
+urllib3==1.25.9
 Werkzeug==1.0.1
